<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Preference">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/minecraft_font"
            android:text="@string/preference"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="35sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/minecraft_font"
        android:text="@string/langue"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/frBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp">

            <ImageView
                android:id="@+id/imageView30"
                android:layout_width="139dp"
                android:layout_height="96dp"
                app:srcCompat="@drawable/cadre"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="0dp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="21dp"
                android:layout_marginTop="37dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="37dp"
                android:fontFamily="@font/minecraft_font"
                android:text="FRANÇAIS"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView30"
                app:layout_constraintEnd_toEndOf="@+id/imageView30"
                app:layout_constraintStart_toStartOf="@+id/imageView30"
                app:layout_constraintTop_toTopOf="@+id/imageView30" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/enBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="139dp"
                android:layout_height="96dp"
                app:srcCompat="@drawable/cadre" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="37dp"
                android:layout_marginEnd="26dp"
                android:layout_marginBottom="37dp"
                android:fontFamily="@font/minecraft_font"
                android:text="ENGLISH"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView5"
                app:layout_constraintEnd_toEndOf="@+id/imageView5"
                app:layout_constraintStart_toStartOf="@+id/imageView5"
                app:layout_constraintTop_toTopOf="@+id/imageView5" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/minecraft_font"
        android:text="@string/difficult"
        android:textAlignment="center"
        android:textColor="#FDFDFD"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ezBtn"
            android:layout_width="130dp"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/cadre2" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="17dp"
                android:fontFamily="@font/minecraft_font"
                android:text="@string/facile"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView9"
                app:layout_constraintEnd_toEndOf="@+id/imageView9"
                app:layout_constraintStart_toStartOf="@+id/imageView9"
                app:layout_constraintTop_toTopOf="@+id/imageView9" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/medBtn"
            android:layout_width="130dp"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/cadre2" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="39dp"
                android:layout_marginBottom="19dp"
                android:fontFamily="@font/minecraft_font"
                android:text="@string/normal"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView10"
                app:layout_constraintEnd_toEndOf="@+id/imageView10"
                app:layout_constraintStart_toStartOf="@+id/imageView10"
                app:layout_constraintTop_toTopOf="@+id/imageView10" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/hrdBtn"
            android:layout_width="130dp"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/cadre2" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="28dp"
                android:layout_marginBottom="17dp"
                android:fontFamily="@font/minecraft_font"
                android:text="@string/dur"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView11"
                app:layout_constraintEnd_toEndOf="@+id/imageView11"
                app:layout_constraintStart_toStartOf="@+id/imageView11"
                app:layout_constraintTop_toTopOf="@+id/imageView11" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dictionnaireBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp">

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="224dp"
            android:layout_height="74dp"
            android:layout_marginStart="93dp"
            android:layout_marginEnd="94dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/cadre2"
            tools:layout_editor_absoluteY="43dp" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="41dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="49dp"
            android:fontFamily="@font/minecraft_font"
            android:text="@string/dictionnaire"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView12"
            app:layout_constraintEnd_toEndOf="@+id/imageView12"
            app:layout_constraintStart_toStartOf="@+id/imageView12"
            app:layout_constraintTop_toTopOf="@+id/imageView12" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/retourPref"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/imageView20"
            android:layout_width="224dp"
            android:layout_height="74dp"
            android:layout_marginStart="93dp"
            android:layout_marginEnd="94dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/cadre2"
            tools:layout_editor_absoluteY="2dp" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="82dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="31dp"
            android:fontFamily="@font/minecraft_font"
            android:text="@string/retour"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView20"
            app:layout_constraintEnd_toEndOf="@+id/imageView20"
            app:layout_constraintStart_toStartOf="@+id/imageView20"
            app:layout_constraintTop_toTopOf="@+id/imageView20" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>