<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#000000"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/statusOutput"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/win" />

        <LinearLayout
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tempsOutput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/minecraft_font"
                android:text="@string/temps"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/motDictio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/minecraft_font"
                android:text="@string/mot"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/langueDictio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="35dp"
            android:fontFamily="@font/minecraft_font"
            android:text="@string/nbErreur"
            android:textAlignment="center"
            android:textColor="#FFFFFF" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="88dp"
            android:layout_height="28dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/letter_holder" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="88dp"
            android:layout_height="28dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/letter_holder" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="88dp"
            android:layout_height="28dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/letter_holder" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="88dp"
            android:layout_height="28dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/letter_holder" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="88dp"
            android:layout_height="28dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/letter_holder" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="88dp"
            android:layout_height="28dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/letter_holder" />
    </LinearLayout>

</LinearLayout>