<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    tools:context=".Dictionnaire">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/minecraft_font"
        android:gravity="center_horizontal"
        android:text="@string/dictionnaire"
        android:textColor="#FFFFFF"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/minecraft_font"
        android:text="@string/motInput"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/motInput"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:fontFamily="@font/minecraft_font"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinnerLng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:spinnerMode="dropdown" />

        <Spinner
            android:id="@+id/spinnerDif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:spinnerMode="dropdown" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ajouterBtnDictio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="152dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="154dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/minecraft_font"
            android:text="@string/ajouter"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView30"
            app:layout_constraintEnd_toEndOf="@+id/imageView30"
            app:layout_constraintStart_toStartOf="@+id/imageView30"
            app:layout_constraintTop_toTopOf="@+id/imageView30" />

        <ImageView
            android:id="@+id/imageView30"
            android:layout_width="413dp"
            android:layout_height="82dp"
            app:srcCompat="@drawable/cadre2"
            tools:layout_editor_absoluteX="-1dp"
            tools:layout_editor_absoluteY="75dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/motRecycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp" />

</LinearLayout>